<resources>
    <string name="app_name">hsu-umc-android-7th</string>
    <string name="maintitle">오늘 하루는 어땠나요?</string>
    <string name="subtitle">감정 우표를 선택해 주세요.</string>
    <string name="explaintitle">선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다.</string>
    <string name="excitedtitle">들뜨고 흥분되요.</string>
    <string name="normaltitle">평범한 하루였어요.</string>
    <string name="happytitle">더 없이 행복한 하루였어요.</string>
    <string name="angertitle">부글부글 화가 나요.</string>
    <string name="anxitytitle">생각이 많아지고 불안해요.</string>
    <string name="angerwhy">왜 화가 났는지 적어볼까요 ?</string>
    <string name="anxietywhy">왜 불안한지 적어볼까요 ?</string>
    <string name="excitedwhy">왜 신나는지 적어볼까요 ?</string>
    <string name="happywhy">왜 행복한지 적어볼까요 ?</string>
    <string name="normalwhy">왜 그저 그런지 적어볼까요 ?</string>

</resources>